// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AbstractInput tests Password should match snaphost 1`] = `
<DocumentFragment>
  .emotion-5 {
  position: relative;
}

.emotion-0 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  width: 100%;
  height: 48px;
  border-style: solid;
  border-width: 1px;
  padding-left: 0.75rem;
  padding-right: 44px;
  border-color: #C4C5CA;
  border-radius: 4px;
  background-color: inherit;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  font-size: 0.875rem;
  color: #323845;
  outline: 0;
  -webkit-transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
  transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
}

.emotion-0:hover {
  border-color: #323845;
}

.emotion-0:focus {
  border-color: #2953B2;
  box-shadow: 0 0 0 1px #2953B2;
}

.emotion-0:disabled {
  background-color: #F4F6FB;
  color: #898F9E;
}

.emotion-0:focus+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

.emotion-0:placeholder-shown:not(:focus)+label {
  padding-top: 0.25rem;
}

.emotion-0:not(:placeholder-shown)+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

.emotion-4 {
  right: 0rem;
  top: 0.25rem;
  height: 46px;
  padding-right: 0.75rem;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #707685;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  margin: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1 {
  min-width: 24px;
  min-height: 24px;
  width: 24px;
  height: 24px;
}

.emotion-3 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  color: currentColor;
  background-color: transparent;
  font-size: 0.75rem;
  height: 32px;
  width: 32px;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  margin-top: 0.5rem;
}

.emotion-3:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #8DB6FA;
}

.emotion-3:hover {
  background-color: rgba(50,56,69,0.04);
}

.emotion-3:active {
  background-color: rgba(50,56,69,0.08);
}

.emotion-3:disabled {
  color: #898F9E;
}

.emotion-3 svg {
  width: 20px;
  min-width: 20px;
  height: 20px;
  min-height: 20px;
  margin: 0.25rem;
}

<div
    class="emotion-5"
  >
    <input
      class="emotion-0"
      id="password"
      readonly=""
      type="password"
      value=""
    />
    <div
      class="emotion-4"
    >
      <button
        aria-label="show password content"
        class="emotion-3"
        type="button"
      >
        <div
          class="emotion-2"
        >
          <svg
            class="emotion-1"
            fill="none"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M7.42275 7.54976C5.9652 8.67616 4.68443 10.2259 3.78399 11.8912C3.74694 11.9598 3.74724 12.0444 3.7842 12.1131C4.68464 13.7787 5.96534 15.3286 7.42278 16.455C8.88442 17.5847 10.4746 18.2524 12.0063 18.2524C13.5379 18.2524 15.1281 17.5847 16.5898 16.4551C18.0473 15.3287 19.3281 13.779 20.2285 12.1137C20.2652 12.0452 20.2652 11.9604 20.2284 11.8919C19.328 10.2263 18.0472 8.67633 16.5897 7.54986C15.1281 6.42018 13.5379 5.75244 12.0063 5.75244C10.4746 5.75244 8.88441 6.42018 7.42275 7.54976ZM6.50552 6.36287C8.13811 5.1012 10.0429 4.25244 12.0063 4.25244C13.9696 4.25244 15.8744 5.1012 17.507 6.36302C19.1437 7.62802 20.5565 9.34452 21.548 11.1788C21.8249 11.6921 21.8252 12.3133 21.5483 12.8266C20.5568 14.6603 19.1437 16.3772 17.507 17.642C15.8744 18.9037 13.9696 19.7524 12.0063 19.7524C10.0429 19.7524 8.1381 18.9037 6.50549 17.6419C4.86877 16.3769 3.45604 14.6604 2.46449 12.8261C2.18757 12.3128 2.18728 11.6916 2.4642 11.1783C3.45575 9.34457 4.86882 7.62773 6.50552 6.36287Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M13.6232 10.3861C12.7306 9.49353 11.2833 9.49353 10.3907 10.3861C9.49809 11.2788 9.49809 12.726 10.3907 13.6186C11.2833 14.5112 12.7306 14.5112 13.6232 13.6186C14.5158 12.726 14.5158 11.2788 13.6232 10.3861ZM14.6333 9.37598C13.1828 7.92546 10.8311 7.92546 9.38053 9.37598C7.93001 10.8265 7.93001 13.1783 9.38053 14.6288C10.8311 16.0793 13.1828 16.0793 14.6333 14.6288C16.0839 13.1783 16.0839 10.8265 14.6333 9.37598Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
  .emotion-5 {
  right: 0rem;
  top: 0.25rem;
  height: 46px;
  padding-right: 0.75rem;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #707685;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  margin: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  min-width: 24px;
  min-height: 24px;
  width: 24px;
  height: 24px;
}

.emotion-6 {
  position: relative;
}

.emotion-6 label {
  left: 44px;
}

.emotion-0 {
  min-width: 20px;
  min-height: 20px;
  width: 20px;
  height: 20px;
  color: #898F9E;
  top: 0.25rem;
  left: 0rem;
  margin-left: 0.75rem;
  margin-right: 0.75rem;
  margin-top: 14px;
  position: absolute;
}

.emotion-1 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  width: 100%;
  height: 48px;
  border-style: solid;
  border-width: 1px;
  padding-left: 44px;
  padding-right: 44px;
  border-color: #C4C5CA;
  border-radius: 4px;
  background-color: inherit;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  font-size: 0.875rem;
  color: #323845;
  outline: 0;
  -webkit-transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
  transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
}

.emotion-1:hover {
  border-color: #323845;
}

.emotion-1:focus {
  border-color: #2953B2;
  box-shadow: 0 0 0 1px #2953B2;
}

.emotion-1:disabled {
  background-color: #F4F6FB;
  color: #898F9E;
}

.emotion-1:focus+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

.emotion-1:placeholder-shown:not(:focus)+label {
  padding-top: 0.25rem;
}

.emotion-1:not(:placeholder-shown)+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

.emotion-4 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  color: currentColor;
  background-color: transparent;
  font-size: 0.75rem;
  height: 32px;
  width: 32px;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  margin-top: 0.5rem;
}

.emotion-4:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-4:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #8DB6FA;
}

.emotion-4:hover {
  background-color: rgba(50,56,69,0.04);
}

.emotion-4:active {
  background-color: rgba(50,56,69,0.08);
}

.emotion-4:disabled {
  color: #898F9E;
}

.emotion-4 svg {
  width: 20px;
  min-width: 20px;
  height: 20px;
  min-height: 20px;
  margin: 0.25rem;
}

<div
    class="emotion-6"
  >
    <svg
      class="emotion-0"
      fill="none"
      viewBox="0 0 24 24"
    >
      <path
        clip-rule="evenodd"
        d="M12.0045 5.59557C12.4187 5.59557 12.7545 5.93136 12.7545 6.34557L12.7545 17.6593C12.7545 18.0735 12.4187 18.4093 12.0045 18.4093C11.5903 18.4093 11.2545 18.0735 11.2545 17.6593L11.2545 6.34557C11.2545 5.93136 11.5903 5.59557 12.0045 5.59557Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
      <path
        clip-rule="evenodd"
        d="M18.4114 12.0024C18.4114 12.4166 18.0756 12.7524 17.6614 12.7524H6.34766C5.93345 12.7524 5.59766 12.4166 5.59766 12.0024C5.59766 11.5882 5.93345 11.2524 6.34766 11.2524H17.6614C18.0756 11.2524 18.4114 11.5882 18.4114 12.0024Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      class="emotion-1"
      id="password"
      readonly=""
      type="password"
      value=""
    />
    <div
      class="emotion-5"
    >
      <button
        aria-label="show password content"
        class="emotion-4"
        type="button"
      >
        <div
          class="emotion-3"
        >
          <svg
            class="emotion-2"
            fill="none"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M7.42275 7.54976C5.9652 8.67616 4.68443 10.2259 3.78399 11.8912C3.74694 11.9598 3.74724 12.0444 3.7842 12.1131C4.68464 13.7787 5.96534 15.3286 7.42278 16.455C8.88442 17.5847 10.4746 18.2524 12.0063 18.2524C13.5379 18.2524 15.1281 17.5847 16.5898 16.4551C18.0473 15.3287 19.3281 13.779 20.2285 12.1137C20.2652 12.0452 20.2652 11.9604 20.2284 11.8919C19.328 10.2263 18.0472 8.67633 16.5897 7.54986C15.1281 6.42018 13.5379 5.75244 12.0063 5.75244C10.4746 5.75244 8.88441 6.42018 7.42275 7.54976ZM6.50552 6.36287C8.13811 5.1012 10.0429 4.25244 12.0063 4.25244C13.9696 4.25244 15.8744 5.1012 17.507 6.36302C19.1437 7.62802 20.5565 9.34452 21.548 11.1788C21.8249 11.6921 21.8252 12.3133 21.5483 12.8266C20.5568 14.6603 19.1437 16.3772 17.507 17.642C15.8744 18.9037 13.9696 19.7524 12.0063 19.7524C10.0429 19.7524 8.1381 18.9037 6.50549 17.6419C4.86877 16.3769 3.45604 14.6604 2.46449 12.8261C2.18757 12.3128 2.18728 11.6916 2.4642 11.1783C3.45575 9.34457 4.86882 7.62773 6.50552 6.36287Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M13.6232 10.3861C12.7306 9.49353 11.2833 9.49353 10.3907 10.3861C9.49809 11.2788 9.49809 12.726 10.3907 13.6186C11.2833 14.5112 12.7306 14.5112 13.6232 13.6186C14.5158 12.726 14.5158 11.2788 13.6232 10.3861ZM14.6333 9.37598C13.1828 7.92546 10.8311 7.92546 9.38053 9.37598C7.93001 10.8265 7.93001 13.1783 9.38053 14.6288C10.8311 16.0793 13.1828 16.0793 14.6333 14.6288C16.0839 13.1783 16.0839 10.8265 14.6333 9.37598Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AbstractInput tests Text should match snapshot 1`] = `
<DocumentFragment>
  .emotion-1 {
  position: relative;
}

.emotion-0 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  width: 100%;
  height: 48px;
  border-style: solid;
  border-width: 1px;
  padding-left: 0.75rem;
  padding-right: 1rem;
  border-color: #C4C5CA;
  border-radius: 4px;
  background-color: inherit;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  font-size: 0.875rem;
  color: #323845;
  outline: 0;
  -webkit-transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
  transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
}

.emotion-0:hover {
  border-color: #323845;
}

.emotion-0:focus {
  border-color: #2953B2;
  box-shadow: 0 0 0 1px #2953B2;
}

.emotion-0:disabled {
  background-color: #F4F6FB;
  color: #898F9E;
}

.emotion-0:focus+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

.emotion-0:placeholder-shown:not(:focus)+label {
  padding-top: 0.25rem;
}

.emotion-0:not(:placeholder-shown)+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

<div
    class="emotion-1"
  >
    <input
      class="emotion-0"
      readonly=""
      value="Test1"
    />
  </div>
  .emotion-2 {
  position: relative;
}

.emotion-0 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  width: 100%;
  height: 48px;
  border-style: solid;
  border-width: 1px;
  padding-left: 0.75rem;
  padding-right: 44px;
  border-color: #C4C5CA;
  border-radius: 4px;
  background-color: inherit;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  font-size: 0.875rem;
  color: #323845;
  outline: 0;
  -webkit-transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
  transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
}

.emotion-0:hover {
  border-color: #323845;
}

.emotion-0:focus {
  border-color: #2953B2;
  box-shadow: 0 0 0 1px #2953B2;
}

.emotion-0:disabled {
  background-color: #F4F6FB;
  color: #898F9E;
}

.emotion-0:focus+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

.emotion-0:placeholder-shown:not(:focus)+label {
  padding-top: 0.25rem;
}

.emotion-0:not(:placeholder-shown)+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

.emotion-1 {
  right: 0rem;
  top: 0.25rem;
  height: 46px;
  padding-right: 0.75rem;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #707685;
}

<div
    class="emotion-2"
  >
    <input
      class="emotion-0"
      value=""
    />
    <div
      class="emotion-1"
    />
  </div>
  .emotion-5 {
  position: relative;
}

.emotion-0 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  width: 100%;
  height: 48px;
  border-style: solid;
  border-width: 1px;
  padding-left: 0.75rem;
  padding-right: 44px;
  border-color: #C4C5CA;
  border-radius: 4px;
  background-color: inherit;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  font-size: 0.875rem;
  color: #323845;
  outline: 0;
  -webkit-transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
  transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
}

.emotion-0:hover {
  border-color: #323845;
}

.emotion-0:focus {
  border-color: #2953B2;
  box-shadow: 0 0 0 1px #2953B2;
}

.emotion-0:disabled {
  background-color: #F4F6FB;
  color: #898F9E;
}

.emotion-0:focus+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

.emotion-0:placeholder-shown:not(:focus)+label {
  padding-top: 0.25rem;
}

.emotion-0:not(:placeholder-shown)+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

.emotion-4 {
  right: 0rem;
  top: 0.25rem;
  height: 46px;
  padding-right: 0.75rem;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #707685;
}

.emotion-3 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  color: currentColor;
  background-color: transparent;
  font-size: 0.75rem;
  height: 32px;
  width: 32px;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  margin-top: 0.5rem;
  margin-right: 0.25rem;
}

.emotion-3:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #8DB6FA;
}

.emotion-3:hover {
  background-color: rgba(50,56,69,0.04);
}

.emotion-3:active {
  background-color: rgba(50,56,69,0.08);
}

.emotion-3:disabled {
  color: #898F9E;
}

.emotion-3 svg {
  width: 20px;
  min-width: 20px;
  height: 20px;
  min-height: 20px;
  margin: 0.25rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  margin: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1 {
  min-width: 24px;
  min-height: 24px;
  width: 24px;
  height: 24px;
}

<div
    class="emotion-5"
  >
    <input
      class="emotion-0"
      readonly=""
      value="Test2"
    />
    <div
      class="emotion-4"
    >
      <button
        aria-label="clear undefined text"
        class="emotion-3"
        type="button"
      >
        <div
          class="emotion-2"
        >
          <svg
            class="emotion-1"
            fill="none"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M12 21V21C7.029 21 3 16.971 3 12V12C3 7.029 7.029 3 12 3V3C16.971 3 21 7.029 21 12V12C21 16.971 16.971 21 12 21Z"
              fill-rule="evenodd"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
            <path
              d="M14.83 9.16992L9.16998 14.8299"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
            <path
              d="M14.83 14.8299L9.16998 9.16992"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
  .emotion-1 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  width: 100%;
  height: 48px;
  border-style: solid;
  border-width: 1px;
  padding-left: 44px;
  padding-right: 1rem;
  border-color: #C4C5CA;
  border-radius: 4px;
  background-color: inherit;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  font-size: 0.875rem;
  color: #323845;
  outline: 0;
  -webkit-transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
  transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
}

.emotion-1:hover {
  border-color: #323845;
}

.emotion-1:focus {
  border-color: #2953B2;
  box-shadow: 0 0 0 1px #2953B2;
}

.emotion-1:disabled {
  background-color: #F4F6FB;
  color: #898F9E;
}

.emotion-1:focus+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

.emotion-1:placeholder-shown:not(:focus)+label {
  padding-top: 0.25rem;
}

.emotion-1:not(:placeholder-shown)+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

.emotion-2 {
  position: relative;
}

.emotion-2 label {
  left: 44px;
}

.emotion-0 {
  min-width: 20px;
  min-height: 20px;
  width: 20px;
  height: 20px;
  color: #898F9E;
  top: 0.25rem;
  left: 0rem;
  margin-left: 0.75rem;
  margin-right: 0.75rem;
  margin-top: 14px;
  position: absolute;
}

<div
    class="emotion-2"
  >
    <svg
      class="emotion-0"
      fill="none"
      viewBox="0 0 24 24"
    >
      <path
        clip-rule="evenodd"
        d="M12.0045 5.59557C12.4187 5.59557 12.7545 5.93136 12.7545 6.34557L12.7545 17.6593C12.7545 18.0735 12.4187 18.4093 12.0045 18.4093C11.5903 18.4093 11.2545 18.0735 11.2545 17.6593L11.2545 6.34557C11.2545 5.93136 11.5903 5.59557 12.0045 5.59557Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
      <path
        clip-rule="evenodd"
        d="M18.4114 12.0024C18.4114 12.4166 18.0756 12.7524 17.6614 12.7524H6.34766C5.93345 12.7524 5.59766 12.4166 5.59766 12.0024C5.59766 11.5882 5.93345 11.2524 6.34766 11.2524H17.6614C18.0756 11.2524 18.4114 11.5882 18.4114 12.0024Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      class="emotion-1"
      value=""
    />
  </div>
  .emotion-1 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  width: 100%;
  height: 48px;
  border-style: solid;
  border-width: 1px;
  padding-left: 44px;
  padding-right: 1rem;
  border-color: #C4C5CA;
  border-radius: 4px;
  background-color: inherit;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  font-size: 0.875rem;
  color: #323845;
  outline: 0;
  -webkit-transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
  transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
}

.emotion-1:hover {
  border-color: #323845;
}

.emotion-1:focus {
  border-color: #2953B2;
  box-shadow: 0 0 0 1px #2953B2;
}

.emotion-1:disabled {
  background-color: #F4F6FB;
  color: #898F9E;
}

.emotion-1:focus+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

.emotion-1:placeholder-shown:not(:focus)+label {
  padding-top: 0.25rem;
}

.emotion-1:not(:placeholder-shown)+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

.emotion-2 {
  position: relative;
}

.emotion-2 label {
  left: 44px;
}

.emotion-0 {
  min-width: 20px;
  min-height: 20px;
  width: 20px;
  height: 20px;
  color: #898F9E;
  top: 0.25rem;
  left: 0rem;
  margin-left: 0.75rem;
  margin-right: 0.75rem;
  margin-top: 14px;
  position: absolute;
}

<div
    class="emotion-2"
  >
    <svg
      class="emotion-0"
      fill="none"
      viewBox="0 0 24 24"
    >
      <path
        clip-rule="evenodd"
        d="M12.0045 5.59557C12.4187 5.59557 12.7545 5.93136 12.7545 6.34557L12.7545 17.6593C12.7545 18.0735 12.4187 18.4093 12.0045 18.4093C11.5903 18.4093 11.2545 18.0735 11.2545 17.6593L11.2545 6.34557C11.2545 5.93136 11.5903 5.59557 12.0045 5.59557Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
      <path
        clip-rule="evenodd"
        d="M18.4114 12.0024C18.4114 12.4166 18.0756 12.7524 17.6614 12.7524H6.34766C5.93345 12.7524 5.59766 12.4166 5.59766 12.0024C5.59766 11.5882 5.93345 11.2524 6.34766 11.2524H17.6614C18.0756 11.2524 18.4114 11.5882 18.4114 12.0024Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      class="emotion-1"
      readonly=""
      value="Test3"
    />
  </div>
  .emotion-2 {
  right: 0rem;
  top: 0.25rem;
  height: 46px;
  padding-right: 0.75rem;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #707685;
}

.emotion-3 {
  position: relative;
}

.emotion-3 label {
  left: 44px;
}

.emotion-0 {
  min-width: 20px;
  min-height: 20px;
  width: 20px;
  height: 20px;
  color: #898F9E;
  top: 0.25rem;
  left: 0rem;
  margin-left: 0.75rem;
  margin-right: 0.75rem;
  margin-top: 14px;
  position: absolute;
}

.emotion-1 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  width: 100%;
  height: 48px;
  border-style: solid;
  border-width: 1px;
  padding-left: 44px;
  padding-right: 44px;
  border-color: #C4C5CA;
  border-radius: 4px;
  background-color: inherit;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  font-size: 0.875rem;
  color: #323845;
  outline: 0;
  -webkit-transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
  transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
}

.emotion-1:hover {
  border-color: #323845;
}

.emotion-1:focus {
  border-color: #2953B2;
  box-shadow: 0 0 0 1px #2953B2;
}

.emotion-1:disabled {
  background-color: #F4F6FB;
  color: #898F9E;
}

.emotion-1:focus+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

.emotion-1:placeholder-shown:not(:focus)+label {
  padding-top: 0.25rem;
}

.emotion-1:not(:placeholder-shown)+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

<div
    class="emotion-3"
  >
    <svg
      class="emotion-0"
      fill="none"
      viewBox="0 0 24 24"
    >
      <path
        clip-rule="evenodd"
        d="M12.0045 5.59557C12.4187 5.59557 12.7545 5.93136 12.7545 6.34557L12.7545 17.6593C12.7545 18.0735 12.4187 18.4093 12.0045 18.4093C11.5903 18.4093 11.2545 18.0735 11.2545 17.6593L11.2545 6.34557C11.2545 5.93136 11.5903 5.59557 12.0045 5.59557Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
      <path
        clip-rule="evenodd"
        d="M18.4114 12.0024C18.4114 12.4166 18.0756 12.7524 17.6614 12.7524H6.34766C5.93345 12.7524 5.59766 12.4166 5.59766 12.0024C5.59766 11.5882 5.93345 11.2524 6.34766 11.2524H17.6614C18.0756 11.2524 18.4114 11.5882 18.4114 12.0024Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      class="emotion-1"
      value=""
    />
    <div
      class="emotion-2"
    />
  </div>
  .emotion-5 {
  right: 0rem;
  top: 0.25rem;
  height: 46px;
  padding-right: 0.75rem;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #707685;
}

.emotion-4 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  color: currentColor;
  background-color: transparent;
  font-size: 0.75rem;
  height: 32px;
  width: 32px;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  margin-top: 0.5rem;
  margin-right: 0.25rem;
}

.emotion-4:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-4:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #8DB6FA;
}

.emotion-4:hover {
  background-color: rgba(50,56,69,0.04);
}

.emotion-4:active {
  background-color: rgba(50,56,69,0.08);
}

.emotion-4:disabled {
  color: #898F9E;
}

.emotion-4 svg {
  width: 20px;
  min-width: 20px;
  height: 20px;
  min-height: 20px;
  margin: 0.25rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  margin: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  min-width: 24px;
  min-height: 24px;
  width: 24px;
  height: 24px;
}

.emotion-6 {
  position: relative;
}

.emotion-6 label {
  left: 44px;
}

.emotion-0 {
  min-width: 20px;
  min-height: 20px;
  width: 20px;
  height: 20px;
  color: #898F9E;
  top: 0.25rem;
  left: 0rem;
  margin-left: 0.75rem;
  margin-right: 0.75rem;
  margin-top: 14px;
  position: absolute;
}

.emotion-1 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  width: 100%;
  height: 48px;
  border-style: solid;
  border-width: 1px;
  padding-left: 44px;
  padding-right: 44px;
  border-color: #C4C5CA;
  border-radius: 4px;
  background-color: inherit;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  font-size: 0.875rem;
  color: #323845;
  outline: 0;
  -webkit-transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
  transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
}

.emotion-1:hover {
  border-color: #323845;
}

.emotion-1:focus {
  border-color: #2953B2;
  box-shadow: 0 0 0 1px #2953B2;
}

.emotion-1:disabled {
  background-color: #F4F6FB;
  color: #898F9E;
}

.emotion-1:focus+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

.emotion-1:placeholder-shown:not(:focus)+label {
  padding-top: 0.25rem;
}

.emotion-1:not(:placeholder-shown)+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

<div
    class="emotion-6"
  >
    <svg
      class="emotion-0"
      fill="none"
      viewBox="0 0 24 24"
    >
      <path
        clip-rule="evenodd"
        d="M12.0045 5.59557C12.4187 5.59557 12.7545 5.93136 12.7545 6.34557L12.7545 17.6593C12.7545 18.0735 12.4187 18.4093 12.0045 18.4093C11.5903 18.4093 11.2545 18.0735 11.2545 17.6593L11.2545 6.34557C11.2545 5.93136 11.5903 5.59557 12.0045 5.59557Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
      <path
        clip-rule="evenodd"
        d="M18.4114 12.0024C18.4114 12.4166 18.0756 12.7524 17.6614 12.7524H6.34766C5.93345 12.7524 5.59766 12.4166 5.59766 12.0024C5.59766 11.5882 5.93345 11.2524 6.34766 11.2524H17.6614C18.0756 11.2524 18.4114 11.5882 18.4114 12.0024Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      class="emotion-1"
      readonly=""
      value="Test4"
    />
    <div
      class="emotion-5"
    >
      <button
        aria-label="clear undefined text"
        class="emotion-4"
        type="button"
      >
        <div
          class="emotion-3"
        >
          <svg
            class="emotion-2"
            fill="none"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M12 21V21C7.029 21 3 16.971 3 12V12C3 7.029 7.029 3 12 3V3C16.971 3 21 7.029 21 12V12C21 16.971 16.971 21 12 21Z"
              fill-rule="evenodd"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
            <path
              d="M14.83 9.16992L9.16998 14.8299"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
            <path
              d="M14.83 14.8299L9.16998 9.16992"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
  .emotion-3 {
  position: relative;
}

.emotion-2 {
  right: 0rem;
  top: 0.25rem;
  height: 46px;
  padding-right: 0.75rem;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #707685;
}

.emotion-0 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  width: 100%;
  height: 48px;
  border-style: solid;
  border-width: 1px;
  padding-left: 0.75rem;
  padding-right: 64px;
  border-color: #C4C5CA;
  border-radius: 4px;
  background-color: inherit;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  font-size: 0.875rem;
  color: #323845;
  outline: 0;
  -webkit-transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
  transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
}

.emotion-0:hover {
  border-color: #323845;
}

.emotion-0:focus {
  border-color: #2953B2;
  box-shadow: 0 0 0 1px #2953B2;
}

.emotion-0:disabled {
  background-color: #F4F6FB;
  color: #898F9E;
}

.emotion-0:focus+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

.emotion-0:placeholder-shown:not(:focus)+label {
  padding-top: 0.25rem;
}

.emotion-0:not(:placeholder-shown)+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

.emotion-1 {
  color: #898F9E;
  border-left-style: solid;
  border-left-width: 1px;
  border-left-color: #C4C5CA;
  padding-top: 14px;
  margin-top: 0.0625rem;
  width: 32px;
  padding-left: 0.75rem;
  line-height: 1.25;
  font-variation-settings: 'wght' 92;
  font-size: 0.875rem;
}

<div
    class="emotion-3"
  >
    <input
      class="emotion-0"
      value=""
    />
    <div
      class="emotion-2"
    >
      <span
        class="emotion-1"
      >
        Kg
      </span>
    </div>
  </div>
  .emotion-3 {
  position: relative;
}

.emotion-2 {
  right: 0rem;
  top: 0.25rem;
  height: 46px;
  padding-right: 0.75rem;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #707685;
}

.emotion-0 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  width: 100%;
  height: 48px;
  border-style: solid;
  border-width: 1px;
  padding-left: 0.75rem;
  padding-right: 64px;
  border-color: #C4C5CA;
  border-radius: 4px;
  background-color: inherit;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  font-size: 0.875rem;
  color: #323845;
  outline: 0;
  -webkit-transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
  transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
}

.emotion-0:hover {
  border-color: #323845;
}

.emotion-0:focus {
  border-color: #2953B2;
  box-shadow: 0 0 0 1px #2953B2;
}

.emotion-0:disabled {
  background-color: #F4F6FB;
  color: #898F9E;
}

.emotion-0:focus+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

.emotion-0:placeholder-shown:not(:focus)+label {
  padding-top: 0.25rem;
}

.emotion-0:not(:placeholder-shown)+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

.emotion-1 {
  color: #898F9E;
  border-left-style: solid;
  border-left-width: 1px;
  border-left-color: #C4C5CA;
  padding-top: 14px;
  margin-top: 0.0625rem;
  width: 32px;
  padding-left: 0.75rem;
  line-height: 1.25;
  font-variation-settings: 'wght' 92;
  font-size: 0.875rem;
}

<div
    class="emotion-3"
  >
    <input
      class="emotion-0"
      readonly=""
      value="Test5"
    />
    <div
      class="emotion-2"
    >
      <span
        class="emotion-1"
      >
        Kg
      </span>
    </div>
  </div>
  .emotion-3 {
  position: relative;
}

.emotion-2 {
  right: 0rem;
  top: 0.25rem;
  height: 46px;
  padding-right: 0.75rem;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #707685;
}

.emotion-1 {
  color: #898F9E;
  border-left-style: solid;
  border-left-width: 1px;
  border-left-color: #C4C5CA;
  padding-top: 14px;
  margin-top: 0.0625rem;
  width: 32px;
  padding-left: 0.75rem;
  line-height: 1.25;
  font-variation-settings: 'wght' 92;
  font-size: 0.875rem;
}

.emotion-0 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  width: 100%;
  height: 48px;
  border-style: solid;
  border-width: 1px;
  padding-left: 0.75rem;
  padding-right: 75px;
  border-color: #C4C5CA;
  border-radius: 4px;
  background-color: inherit;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  font-size: 0.875rem;
  color: #323845;
  outline: 0;
  -webkit-transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
  transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
}

.emotion-0:hover {
  border-color: #323845;
}

.emotion-0:focus {
  border-color: #2953B2;
  box-shadow: 0 0 0 1px #2953B2;
}

.emotion-0:disabled {
  background-color: #F4F6FB;
  color: #898F9E;
}

.emotion-0:focus+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

.emotion-0:placeholder-shown:not(:focus)+label {
  padding-top: 0.25rem;
}

.emotion-0:not(:placeholder-shown)+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

<div
    class="emotion-3"
  >
    <input
      class="emotion-0"
      value=""
    />
    <div
      class="emotion-2"
    >
      <span
        class="emotion-1"
      >
        Kg
      </span>
    </div>
  </div>
  .emotion-3 {
  right: 0rem;
  top: 0.25rem;
  height: 46px;
  padding-right: 0.75rem;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #707685;
}

.emotion-4 {
  position: relative;
}

.emotion-4 label {
  left: 44px;
}

.emotion-0 {
  min-width: 20px;
  min-height: 20px;
  width: 20px;
  height: 20px;
  color: #898F9E;
  top: 0.25rem;
  left: 0rem;
  margin-left: 0.75rem;
  margin-right: 0.75rem;
  margin-top: 14px;
  position: absolute;
}

.emotion-2 {
  color: #898F9E;
  border-left-style: solid;
  border-left-width: 1px;
  border-left-color: #C4C5CA;
  padding-top: 14px;
  margin-top: 0.0625rem;
  width: 32px;
  padding-left: 0.75rem;
  line-height: 1.25;
  font-variation-settings: 'wght' 92;
  font-size: 0.875rem;
}

.emotion-1 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  width: 100%;
  height: 48px;
  border-style: solid;
  border-width: 1px;
  padding-left: 44px;
  padding-right: 64px;
  border-color: #C4C5CA;
  border-radius: 4px;
  background-color: inherit;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  font-size: 0.875rem;
  color: #323845;
  outline: 0;
  -webkit-transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
  transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
}

.emotion-1:hover {
  border-color: #323845;
}

.emotion-1:focus {
  border-color: #2953B2;
  box-shadow: 0 0 0 1px #2953B2;
}

.emotion-1:disabled {
  background-color: #F4F6FB;
  color: #898F9E;
}

.emotion-1:focus+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

.emotion-1:placeholder-shown:not(:focus)+label {
  padding-top: 0.25rem;
}

.emotion-1:not(:placeholder-shown)+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

<div
    class="emotion-4"
  >
    <svg
      class="emotion-0"
      fill="none"
      viewBox="0 0 24 24"
    >
      <path
        clip-rule="evenodd"
        d="M12.0045 5.59557C12.4187 5.59557 12.7545 5.93136 12.7545 6.34557L12.7545 17.6593C12.7545 18.0735 12.4187 18.4093 12.0045 18.4093C11.5903 18.4093 11.2545 18.0735 11.2545 17.6593L11.2545 6.34557C11.2545 5.93136 11.5903 5.59557 12.0045 5.59557Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
      <path
        clip-rule="evenodd"
        d="M18.4114 12.0024C18.4114 12.4166 18.0756 12.7524 17.6614 12.7524H6.34766C5.93345 12.7524 5.59766 12.4166 5.59766 12.0024C5.59766 11.5882 5.93345 11.2524 6.34766 11.2524H17.6614C18.0756 11.2524 18.4114 11.5882 18.4114 12.0024Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      class="emotion-1"
      value=""
    />
    <div
      class="emotion-3"
    >
      <span
        class="emotion-2"
      >
        Kg
      </span>
    </div>
  </div>
  .emotion-3 {
  right: 0rem;
  top: 0.25rem;
  height: 46px;
  padding-right: 0.75rem;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #707685;
}

.emotion-4 {
  position: relative;
}

.emotion-4 label {
  left: 44px;
}

.emotion-0 {
  min-width: 20px;
  min-height: 20px;
  width: 20px;
  height: 20px;
  color: #898F9E;
  top: 0.25rem;
  left: 0rem;
  margin-left: 0.75rem;
  margin-right: 0.75rem;
  margin-top: 14px;
  position: absolute;
}

.emotion-2 {
  color: #898F9E;
  border-left-style: solid;
  border-left-width: 1px;
  border-left-color: #C4C5CA;
  padding-top: 14px;
  margin-top: 0.0625rem;
  width: 32px;
  padding-left: 0.75rem;
  line-height: 1.25;
  font-variation-settings: 'wght' 92;
  font-size: 0.875rem;
}

.emotion-1 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  width: 100%;
  height: 48px;
  border-style: solid;
  border-width: 1px;
  padding-left: 44px;
  padding-right: 75px;
  border-color: #C4C5CA;
  border-radius: 4px;
  background-color: inherit;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  font-size: 0.875rem;
  color: #323845;
  outline: 0;
  -webkit-transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
  transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
}

.emotion-1:hover {
  border-color: #323845;
}

.emotion-1:focus {
  border-color: #2953B2;
  box-shadow: 0 0 0 1px #2953B2;
}

.emotion-1:disabled {
  background-color: #F4F6FB;
  color: #898F9E;
}

.emotion-1:focus+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

.emotion-1:placeholder-shown:not(:focus)+label {
  padding-top: 0.25rem;
}

.emotion-1:not(:placeholder-shown)+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

<div
    class="emotion-4"
  >
    <svg
      class="emotion-0"
      fill="none"
      viewBox="0 0 24 24"
    >
      <path
        clip-rule="evenodd"
        d="M12.0045 5.59557C12.4187 5.59557 12.7545 5.93136 12.7545 6.34557L12.7545 17.6593C12.7545 18.0735 12.4187 18.4093 12.0045 18.4093C11.5903 18.4093 11.2545 18.0735 11.2545 17.6593L11.2545 6.34557C11.2545 5.93136 11.5903 5.59557 12.0045 5.59557Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
      <path
        clip-rule="evenodd"
        d="M18.4114 12.0024C18.4114 12.4166 18.0756 12.7524 17.6614 12.7524H6.34766C5.93345 12.7524 5.59766 12.4166 5.59766 12.0024C5.59766 11.5882 5.93345 11.2524 6.34766 11.2524H17.6614C18.0756 11.2524 18.4114 11.5882 18.4114 12.0024Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      class="emotion-1"
      value=""
    />
    <div
      class="emotion-3"
    >
      <span
        class="emotion-2"
      >
        Kg
      </span>
    </div>
  </div>
  .emotion-6 {
  right: 0rem;
  top: 0.25rem;
  height: 46px;
  padding-right: 0.75rem;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #707685;
}

.emotion-4 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  color: currentColor;
  background-color: transparent;
  font-size: 0.75rem;
  height: 32px;
  width: 32px;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  margin-top: 0.5rem;
  margin-right: 0.25rem;
}

.emotion-4:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-4:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #8DB6FA;
}

.emotion-4:hover {
  background-color: rgba(50,56,69,0.04);
}

.emotion-4:active {
  background-color: rgba(50,56,69,0.08);
}

.emotion-4:disabled {
  color: #898F9E;
}

.emotion-4 svg {
  width: 20px;
  min-width: 20px;
  height: 20px;
  min-height: 20px;
  margin: 0.25rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  margin: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  min-width: 24px;
  min-height: 24px;
  width: 24px;
  height: 24px;
}

.emotion-7 {
  position: relative;
}

.emotion-7 label {
  left: 44px;
}

.emotion-0 {
  min-width: 20px;
  min-height: 20px;
  width: 20px;
  height: 20px;
  color: #898F9E;
  top: 0.25rem;
  left: 0rem;
  margin-left: 0.75rem;
  margin-right: 0.75rem;
  margin-top: 14px;
  position: absolute;
}

.emotion-5 {
  color: #898F9E;
  border-left-style: solid;
  border-left-width: 1px;
  border-left-color: #C4C5CA;
  padding-top: 14px;
  margin-top: 0.0625rem;
  width: 32px;
  padding-left: 0.75rem;
  line-height: 1.25;
  font-variation-settings: 'wght' 92;
  font-size: 0.875rem;
}

.emotion-1 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  width: 100%;
  height: 48px;
  border-style: solid;
  border-width: 1px;
  padding-left: 44px;
  padding-right: 75px;
  border-color: #C4C5CA;
  border-radius: 4px;
  background-color: inherit;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  font-size: 0.875rem;
  color: #323845;
  outline: 0;
  -webkit-transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
  transition: all 70ms cubic-bezier(0.2, 0.2, 0.38, 0.9);
}

.emotion-1:hover {
  border-color: #323845;
}

.emotion-1:focus {
  border-color: #2953B2;
  box-shadow: 0 0 0 1px #2953B2;
}

.emotion-1:disabled {
  background-color: #F4F6FB;
  color: #898F9E;
}

.emotion-1:focus+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

.emotion-1:placeholder-shown:not(:focus)+label {
  padding-top: 0.25rem;
}

.emotion-1:not(:placeholder-shown)+label {
  -webkit-transform: translate(1px, 4px) scale(0.875);
  -moz-transform: translate(1px, 4px) scale(0.875);
  -ms-transform: translate(1px, 4px) scale(0.875);
  transform: translate(1px, 4px) scale(0.875);
}

<div
    class="emotion-7"
  >
    <svg
      class="emotion-0"
      fill="none"
      viewBox="0 0 24 24"
    >
      <path
        clip-rule="evenodd"
        d="M12.0045 5.59557C12.4187 5.59557 12.7545 5.93136 12.7545 6.34557L12.7545 17.6593C12.7545 18.0735 12.4187 18.4093 12.0045 18.4093C11.5903 18.4093 11.2545 18.0735 11.2545 17.6593L11.2545 6.34557C11.2545 5.93136 11.5903 5.59557 12.0045 5.59557Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
      <path
        clip-rule="evenodd"
        d="M18.4114 12.0024C18.4114 12.4166 18.0756 12.7524 17.6614 12.7524H6.34766C5.93345 12.7524 5.59766 12.4166 5.59766 12.0024C5.59766 11.5882 5.93345 11.2524 6.34766 11.2524H17.6614C18.0756 11.2524 18.4114 11.5882 18.4114 12.0024Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      class="emotion-1"
      readonly=""
      value="Test6"
    />
    <div
      class="emotion-6"
    >
      <button
        aria-label="clear undefined text"
        class="emotion-4"
        type="button"
      >
        <div
          class="emotion-3"
        >
          <svg
            class="emotion-2"
            fill="none"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M12 21V21C7.029 21 3 16.971 3 12V12C3 7.029 7.029 3 12 3V3C16.971 3 21 7.029 21 12V12C21 16.971 16.971 21 12 21Z"
              fill-rule="evenodd"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
            <path
              d="M14.83 9.16992L9.16998 14.8299"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
            <path
              d="M14.83 14.8299L9.16998 9.16992"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </div>
      </button>
      <span
        class="emotion-5"
      >
        Kg
      </span>
    </div>
  </div>
</DocumentFragment>
`;
